--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 
 <head>
-<title>Doceria Single Page</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Doceria Single Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-<h1>Doceria</h1>
+    <h1>Doceria</h1>
 </body>
 
 </html>
