--- a/index.html
+++ b/index.html
@@ -10,7 +10,39 @@
 </head>
 
 <body>
-    <h1>Doceria</h1>
+    <div class="container">
+        <div id="sidebar">
+            <div class="sidebar-container">
+                <img class="logo-doceria" src="C:\Users\Samuel\Desktop\Project\Page-CandyStore\img\stand.png"
+                    alt="Logo Doceria" />
+                <h1>Doceria</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#sessao-bemvindo">Bem vindo</a></li>
+                        <li><a href="#sessao-sobre">Sobre</a></li>
+                        <li><a href="#sessao-doces1">Doces 1</a></li>
+                        <li><a href="#sessao-doces2">Doces 2</a></li>
+                        <li><a href="#sessao-doces3">Doces 3</a></li>
+                        <li><a href="#sessao-contato">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="content">
+            <main>
+                <section id="sessao-bemvindo">
+                    <div class="banner"></div>
+                    <div class="sessao-bemvindo-content">
+                        <h1>Seja bem vindo a Doceria</h1>
+                        
+                    </div>
+                </section>
+            </main>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
