--- a/index.html
+++ b/index.html
@@ -35,9 +35,87 @@
                     <div class="banner"></div>
                     <div class="sessao-bemvindo-content">
                         <h1>Seja bem vindo a Doceria</h1>
-                        
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet. Et facere totam hic pariatur voluptatum ea voluptatem natus
+                                non possimus velit. Ut omnis internos ad numquam explicabo est dolorem corporis ut culpa
+                                quia. Eum inventore distinctio aut quia similique eum rerum ullam aut vero delectus nam
+                                necessitatibus aliquam qui architecto repellendus eum tempore ipsum. Cum velit animi in
+                                tenetur quaerat nam voluptatum quibusdam id vero enim et nemo mollitia.
+                            </p>
+                            <p>Aut sunt quia 33 voluptas sint ut quisquam quod et molestiae voluptate qui necessitatibus
+                                consequatur id accusantium porro? Aut nihil facere ea officiis quasi sed inventore
+                                facere est dolorem illo cum dolores quia. Est autem quibusdam est Quis architecto ad
+                                cumque eveniet qui pariatur dignissimos qui provident sint non dolores impedit qui
+                                consectetur iste. Est deleniti ratione in ullam quasi aut officiis voluptatem sit quia
+                                laboriosam in vero labore ut itaque ipsa id aperiam rerum.
+                            </p>
+                            <p>Ab facilis neque vel culpa quae et exercitationem asperiores sed enim facere. Quo amet
+                                ratione et velit dolore qui dolorem eius id aliquam dicta hic sint minus et
+                                necessitatibus exercitationem.
+                            </p>
+                            <a href="#" class="sessao-bemvindo-btn">Leia mais</a>
+                        </div>
+
                     </div>
                 </section>
+                <section id="sessao-sobre">
+                    <div class="sessao-content">
+                        <h1>Sobre nós</h1>
+                        <div class="sessao-minibaner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet. Et facere totam hic pariatur voluptatum ea voluptatem natus
+                                non possimus velit. Ut omnis internos ad numquam explicabo est dolorem corporis ut culpa
+                                quia. Eum inventore distinctio aut quia similique eum rerum ullam aut vero delectus nam
+                                necessitatibus aliquam qui architecto repellendus eum tempore ipsum. Cum velit animi in
+                                tenetur quaerat nam voluptatum quibusdam id vero enim et nemo mollitia.
+                            </p>
+                            <p>Aut sunt quia 33 voluptas sint ut quisquam quod et molestiae voluptate qui necessitatibus
+                                consequatur id accusantium porro? Aut nihil facere ea officiis quasi sed inventore
+                                facere est dolorem illo cum dolores quia. Est autem quibusdam est Quis architecto ad
+                                cumque eveniet qui pariatur dignissimos qui provident sint non dolores impedit qui
+                                consectetur iste. Est deleniti ratione in ullam quasi aut officiis voluptatem sit quia
+                                laboriosam in vero labore ut itaque ipsa id aperiam rerum.
+                            </p>
+                            <p>Ab facilis neque vel culpa quae et exercitationem asperiores sed enim facere. Quo amet
+                                ratione et velit dolore qui dolorem eius id aliquam dicta hic sint minus et
+                                necessitatibus exercitationem.
+                            </p>
+                        </div>
+                </section>
+                <section id="sessao-doces1">
+                    <h2>Doces 1</h2>
+                    <div class="doces1-imgs banner-galeria" id="img1"></div>
+                    <div class="doces1-imgs banner-galeria" id="img2"></div>
+                    <div class="doces1-imgs banner-galeria" id="img3"></div>
+                    <div class="doces1-imgs banner-galeria" id="img4"></div>
+                    <div class="doces1-imgs banner-galeria" id="img5"></div>
+                </section>
+                <section id="sessao-doces2">
+                    <h2>Doces 2</h2>
+                    <div class="doces2-imgs banner-galeria" id="img6"></div>
+                    <div class="doces2-imgs banner-galeria" id="img7"></div>
+                    <div class="doces2-imgs banner-galeria" id="img8"></div>
+                </section>
+                <section id="sessao-doces3">
+                    <h2>Doces 3</h2>
+                    <div class="doces3-imgs banner-galeria" id="img9"></div>
+                    <div class="doces3-imgs banner-galeria" id="img10"></div>
+                    <div class="doces3-imgs banner-galeria" id="img11"></div>
+                    <div class="doces3-imgs banner-galeria" id="img12"></div>
+                </section>
+                <section id="sessao-contato">
+                    <h2>Contato</h2>
+                    <form id="form-contato">
+                        <input type="text" name="name" placeholder="Nome">
+                        <input type="email" name="email" placeholder="Email">
+                        <textarea name="message" placeholder="Digite sua mensagem" cols="30" rows="10"></textarea>
+                        <input type="submit" value="Enviar">
+                    </form>
+                </section>
+                <footer>
+                    <p>SamuelProject @2022</p>
+                </footer>
             </main>
         </div>
 
