--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <nav>
                     <ul>
                         <li><a href="#sessao-bemvindo">Bem vindo</a></li>
+                        <li><a href="#sessao-sobre">Sobre nós</a></li>
                         <li><a href="#sessao-doces1">Doces 1</a></li>
                         <li><a href="#sessao-doces2">Doces 2</a></li>
                         <li><a href="#sessao-doces3">Doces 3</a></li>
-                        <li><a href="#sessao-sobre">Sobre</a></li>
                         <li><a href="#sessao-contato">Contato</a></li>
                     </ul>
                 </nav>
@@ -52,10 +52,28 @@
                             </p>
                             <a href="#" class="sessao-bemvindo-btn">Leia mais</a>
                         </div>
-
                     </div>
                 </section>
-
+                <section id="sessao-sobre">
+                    <div class="sessao-content">
+                        <h1>Sobre nós</h1>
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet. Et facere totam hic pariatur voluptatum ea voluptatem natus
+                                non possimus velit. Ut omnis internos ad numquam explicabo est dolorem corporis ut culpa
+                                quia. Eum inventore distinctio aut quia similique eum rerum ullam aut vero delectus nam.
+                            </p>
+                            <p>Aut sunt quia 33 voluptas sint ut quisquam quod et molestiae voluptate qui necessitatibus
+                                consequatur id accusantium porro? Aut nihil facere ea officiis quasi sed inventore
+                                facere est dolorem illo cum dolores quia. Est autem quibusdam est Quis architecto ad
+                                cumque eveniet qui pariatur dignissimos qui provident sint non dolores impedit qu
+                            </p>
+                            <p>Ab facilis neque vel culpa quae et exercitationem asperiores sed enim facere. Quo amet
+                                ratione et velit dolore qui dolorem eius id aliquam dicta hic sint minus et
+                                necessitatibus exercitationem.
+                            </p>
+                        </div>
+                </section>
                 <section id="sessao-doces1">
                     <h2>Doces 1</h2>
                     <div class="doces1-imgs banner-galeria" id="img1"></div>
@@ -76,26 +94,6 @@
                     <div class="doces3-imgs banner-galeria" id="img10"></div>
                     <div class="doces3-imgs banner-galeria" id="img11"></div>
                     <div class="doces3-imgs banner-galeria" id="img12"></div>
-                </section>
-                <section id="sessao-sobre">
-                    <div class="sessao-content">
-                        <h1>Sobre nós</h1>
-                        <div class="sessao-minibaner"></div>
-                        <div class="sessao-descricao">
-                            <p>Lorem ipsum dolor sit amet. Et facere totam hic pariatur voluptatum ea voluptatem natus
-                                non possimus velit. Ut omnis internos ad numquam explicabo est dolorem corporis ut culpa
-                                quia. Eum inventore distinctio aut quia similique eum rerum ullam aut vero delectus nam.
-                            </p>
-                            <p>Aut sunt quia 33 voluptas sint ut quisquam quod et molestiae voluptate qui necessitatibus
-                                consequatur id accusantium porro? Aut nihil facere ea officiis quasi sed inventore
-                                facere est dolorem illo cum dolores quia. Est autem quibusdam est Quis architecto ad
-                                cumque eveniet qui pariatur dignissimos qui provident sint non dolores impedit qu               
-                            </p>
-                            <p>Ab facilis neque vel culpa quae et exercitationem asperiores sed enim facere. Quo amet
-                                ratione et velit dolore qui dolorem eius id aliquam dicta hic sint minus et
-                                necessitatibus exercitationem.
-                            </p>
-                        </div>
                 </section>
                 <section id="sessao-contato">
                     <h2>Contato</h2>
